// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component allows full-width mode 1`] = `
<div>
  <div
    class="Container-root-5 Container-fullWidth-6"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Container component allows wrapper className 1`] = `
<div>
  <div
    class="Container-root-3 wrapper-className"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Container component renders correctly 1`] = `
<div>
  <div
    class="Container-root-1"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      Content
    </div>
  </div>
</div>
`;
